fix: return early when wallet is not assigned

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             
             await checkAndRegisterWall(_wall); // Ensure checkAndRegisterWall finishes before proceeding
 
-            if (_wall === '') {
+            if (_wall == null || _wall == '') {  
                 return;
             }
 
