feat: add adsense

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
+    
+    <meta name="google-adsense-account" content="ca-pub-8681602836348136">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8681602836348136"
+     crossorigin="anonymous"></script>
+
+
     <title>TEAZARD</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico?v=0.1" />
     <link rel="stylesheet" href="TemplateData/style.css" />
